# APIfit/src/main/java/org/uha/ensisa/fanfan/APIfit/model/User.java
@@ -2,12 +2,18 @@ package org.uha.ensisa.fanfan.APIfit.model;
 
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
+import javax.persistence.CollectionTable;
+import javax.persistence.Column;
 import javax.persistence.ElementCollection;
 import javax.persistence.Entity;
+import javax.persistence.FetchType;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
+import javax.persistence.MapKeyColumn;
 import javax.persistence.Table;
 
 @Entity
@@ -17,23 +23,24 @@ public class User {
 
 	@Id
 	@GeneratedValue(strategy = GenerationType.AUTO)
-	
+
 	int id;
 	String username;
 	String password;
 	boolean admin;
 	@ElementCollection
-	ArrayList<Integer> challenges;
+	List<Tag> tags;
 
 	public User() {
 	}
-	
+
 	public User(int id, String username, String password, boolean admin, Integer chalId) {
 		this.username = username;
 		this.password = password;
-		this.admin= admin;
-		this.challenges = new ArrayList<Integer>();
-		if(chalId != null)this.challenges.add(chalId);
+		this.admin = admin;
+		this.tags = new ArrayList<Tag>();
+		if (chalId != null)
+			this.tags.add(new Tag(chalId, 0));
 	}
 
 	public int getId() {
@@ -69,37 +76,49 @@ public class User {
 	}
 
 	public ArrayList<Integer> getChallenges() {
-		return challenges;
-	}
-
-	public void setChallenges(ArrayList<Integer> challenges) {
-		this.challenges = challenges;
-	}
-
-	public void addChallenge(Integer chalId) {
-		this.challenges.add(chalId);
+		List<Integer> list = new ArrayList<Integer>();
+		for (Tag tag : tags) {
+			list.add(tag.getChalId());
+		}
+		return (ArrayList<Integer>) list;
 	}
 
 	public void deleteChallenge(Integer chalId) {
-		this.challenges.remove(chalId);
+		for (Tag tag : tags) {
+			if (tag.chalId == chalId)
+				tags.remove(tag);
+		}
 	}
 
 	public String chalsToString() {
 		String result = "{";
-		for (Integer chal : challenges) {
-			if (chal == challenges.get(challenges.size() - 1))
-				result += "chalId: " + chal;
+		for (Tag tag : tags) {
+			if (tag.getChalId() == tags.get(tags.size() - 1).getChalId())
+				result += "chalId: " + tag.getChalId() + "distTraveled: " + tag.getDistTraveled();
 			else
-				result += "chalId: " + chal + ", ";
+				result += "chalId: " + tag.getChalId() + "distTraveled: " + tag.getDistTraveled() + ", ";
 		}
 		result += "}";
 		return result;
+	}
+
+	public void addChall(int chalId) {
+		tags.add(new Tag(chalId, 0));
+
 	}
 
 	@Override
 	public String toString() {
 		String result = "{username: " + username + ", password: " + password + ", challenges: " + chalsToString() + "}";
 		return result;
+	}
+
+	public void move(int chalId, int move) {
+		for (Tag tag : tags) {
+			if (tag.chalId == chalId)
+				tag.setDistTraveled(tag.getDistTraveled() + move);
+		}
+
 	}
 
 }
